// Generated by j5build v0.0.0-20250327071644-781ea9870e8f. DO NOT EDIT

syntax = "proto3";

package test.v1;

import "buf/validate/validate.proto";
import "j5/ext/v1/annotations.proto";
import "j5/list/v1/annotations.proto";
import "j5/state/v1/metadata.proto";

message BarKeys {
  option (j5.ext.v1.psm) = {
    entity_name: "bar"
    entity_part: ENTITY_PART_KEYS
  };

  option (j5.ext.v1.message).object = {};

  string bar_id = 1 [
    (buf.validate.field) = {
      required: true
      string: {
        uuid: true
      }
    },
    (j5.ext.v1.field).key = {},
    (j5.ext.v1.key).primary_key = true
  ];

  string bar_other_id = 2 [
    (buf.validate.field) = {
      required: true
      string: {
        uuid: true
      }
    },
    (j5.ext.v1.field).key = {},
    (j5.ext.v1.key).primary_key = true
  ];
}

message BarData {
  option (j5.ext.v1.psm) = {
    entity_name: "bar"
    entity_part: ENTITY_PART_DATA
  };

  option (j5.ext.v1.message).object = {};

  optional string tenant_id = 1 [
    (buf.validate.field).string.uuid = true,
    (j5.ext.v1.field).key = {}
  ];

  string name = 2 [
    (j5.ext.v1.field).string = {},
    (j5.list.v1.field).string.open_text.searching = {
      searchable: true
      field_identifier: "tsv_name"
    }
  ];

  string field = 3 [
    (j5.ext.v1.field).string = {},
    (j5.list.v1.field).string.open_text.searching = {
      searchable: true
      field_identifier: "tsv_field"
    }
  ];
}

message BarState {
  option (j5.ext.v1.psm) = {
    entity_name: "bar"
    entity_part: ENTITY_PART_STATE
  };

  option (j5.ext.v1.message).object = {};

  j5.state.v1.StateMetadata metadata = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];

  BarKeys keys = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object.flatten = true
  ];

  BarData data = 3 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];

  BarStatus status = 4 [
    (buf.validate.field) = {
      required: true
      enum: {
        defined_only: true
      }
    },
    (j5.ext.v1.field).enum = {},
    (j5.list.v1.field).enum.filtering.filterable = true
  ];
}

message BarEventType {
  option (j5.ext.v1.message).oneof = {};

  oneof type {
    Created created = 1 [(j5.ext.v1.field).object = {}];

    Updated updated = 2 [(j5.ext.v1.field).object = {}];

    Deleted deleted = 3 [(j5.ext.v1.field).object = {}];
  }

  message Created {
    option (j5.ext.v1.message).object = {};

    string name = 1 [(j5.ext.v1.field).string = {}];

    string field = 2 [(j5.ext.v1.field).string = {}];
  }

  message Updated {
    option (j5.ext.v1.message).object = {};

    string name = 1 [(j5.ext.v1.field).string = {}];

    string field = 2 [(j5.ext.v1.field).string = {}];
  }

  message Deleted {
    option (j5.ext.v1.message).object = {};
  }
}

message BarEvent {
  option (j5.ext.v1.psm) = {
    entity_name: "bar"
    entity_part: ENTITY_PART_EVENT
  };

  option (j5.ext.v1.message).object = {};

  j5.state.v1.EventMetadata metadata = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];

  BarKeys keys = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object.flatten = true
  ];

  BarEventType event = 3 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).oneof = {},
    (j5.list.v1.field).oneof.filtering.filterable = true
  ];
}

enum BarStatus {
  BAR_STATUS_UNSPECIFIED = 0;
  BAR_STATUS_ACTIVE = 1;
  BAR_STATUS_DELETED = 2;
}
