// Generated by j5build v0.0.0-20250327071644-781ea9870e8f. DO NOT EDIT

syntax = "proto3";

package test.v1;

import "buf/validate/validate.proto";
import "j5/ext/v1/annotations.proto";
import "j5/list/v1/annotations.proto";
import "j5/state/v1/metadata.proto";

message FooKeys {
  option (j5.ext.v1.psm) = {
    entity_name: "foo"
    entity_part: ENTITY_PART_KEYS
  };

  option (j5.ext.v1.message).object = {};

  string foo_id = 1 [
    (buf.validate.field) = {
      required: true
      string: {
        uuid: true
      }
    },
    (j5.ext.v1.field).key = {},
    (j5.ext.v1.key).primary_key = true,
    (j5.list.v1.field).string.foreign_key.uuid.filtering.filterable = true
  ];

  optional string tenant_id = 2 [
    (buf.validate.field).string.uuid = true,
    (j5.ext.v1.field).key = {},
    (j5.ext.v1.key).tenant_type = "tenant",
    (j5.list.v1.field).string.foreign_key.uuid.filtering.filterable = true
  ];

  string meta_tenant_id = 3 [
    (buf.validate.field).string.uuid = true,
    (j5.ext.v1.field).key = {},
    (j5.list.v1.field).string.foreign_key.uuid.filtering.filterable = true
  ];
}

message FooData {
  option (j5.ext.v1.psm) = {
    entity_name: "foo"
    entity_part: ENTITY_PART_DATA
  };

  option (j5.ext.v1.message).object = {};

  string name = 1 [
    (j5.ext.v1.field).string = {},
    (j5.list.v1.field).string.open_text.searching = {
      searchable: true
      field_identifier: "tsv_name"
    }
  ];

  string field = 2 [
    (j5.ext.v1.field).string = {},
    (j5.list.v1.field).string.open_text.searching = {
      searchable: true
      field_identifier: "tsv_field"
    }
  ];

  optional string description = 3 [
    (j5.ext.v1.field).string = {},
    (j5.list.v1.field).string.open_text.searching = {
      searchable: true
      field_identifier: "tsv_description"
    }
  ];

  FooCharacteristics characteristics = 4 [(j5.ext.v1.field).object = {}];

  repeated FooProfile profiles = 5 [(j5.ext.v1.field).array = {}];
}

message FooState {
  option (j5.ext.v1.psm) = {
    entity_name: "foo"
    entity_part: ENTITY_PART_STATE
  };

  option (j5.ext.v1.message).object = {};

  j5.state.v1.StateMetadata metadata = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];

  FooKeys keys = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object.flatten = true
  ];

  FooData data = 3 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];

  FooStatus status = 4 [
    (buf.validate.field) = {
      required: true
      enum: {
        defined_only: true
      }
    },
    (j5.ext.v1.field).enum = {},
    (j5.list.v1.field).enum.filtering = {
      filterable: true
      default_filters: ["FOO_STATUS_ACTIVE"]
    }
  ];
}

message FooEventType {
  option (j5.ext.v1.message).oneof = {};

  oneof type {
    Created created = 1 [(j5.ext.v1.field).object = {}];

    Updated updated = 2 [(j5.ext.v1.field).object = {}];

    Deleted deleted = 3 [(j5.ext.v1.field).object = {}];
  }

  message Created {
    option (j5.ext.v1.message).object = {};

    string name = 1 [(j5.ext.v1.field).string = {}];

    string field = 2 [(j5.ext.v1.field).string = {}];

    optional string description = 3 [(j5.ext.v1.field).string = {}];

    optional int64 weight = 4 [(j5.ext.v1.field).integer = {}];

    optional int64 height = 5 [(j5.ext.v1.field).integer = {}];

    optional int64 length = 6 [(j5.ext.v1.field).integer = {}];

    repeated FooProfile profiles = 7 [(j5.ext.v1.field).array = {}];
  }

  message Updated {
    option (j5.ext.v1.message).object = {};

    string name = 1 [(j5.ext.v1.field).string = {}];

    string field = 2 [(j5.ext.v1.field).string = {}];

    optional string description = 3 [(j5.ext.v1.field).string = {}];

    optional int64 weight = 4 [(j5.ext.v1.field).integer = {}];

    optional int64 height = 5 [(j5.ext.v1.field).integer = {}];

    optional int64 length = 6 [(j5.ext.v1.field).integer = {}];

    repeated FooProfile profiles = 7 [(j5.ext.v1.field).array = {}];

    bool delete = 8 [(j5.ext.v1.field).bool = {}];
  }

  message Deleted {
    option (j5.ext.v1.message).object = {};

    bool delete = 1 [(j5.ext.v1.field).bool = {}];
  }
}

message FooEvent {
  option (j5.ext.v1.psm) = {
    entity_name: "foo"
    entity_part: ENTITY_PART_EVENT
  };

  option (j5.ext.v1.message).object = {};

  j5.state.v1.EventMetadata metadata = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];

  FooKeys keys = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object.flatten = true
  ];

  FooEventType event = 3 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).oneof = {},
    (j5.list.v1.field).oneof.filtering.filterable = true
  ];
}

message FooCharacteristics {
  option (j5.ext.v1.message).object = {};

  int64 weight = 1 [
    (j5.ext.v1.field).integer = {},
    (j5.list.v1.field).int64 = {
      filtering: {
        filterable: true
      }
      sorting: {
        sortable: true
      }
    }
  ];

  int64 height = 2 [
    (j5.ext.v1.field).integer = {},
    (j5.list.v1.field).int64 = {
      filtering: {
        filterable: true
      }
      sorting: {
        sortable: true
      }
    }
  ];

  int64 length = 3 [
    (j5.ext.v1.field).integer = {},
    (j5.list.v1.field).int64 = {
      filtering: {
        filterable: true
      }
      sorting: {
        sortable: true
      }
    }
  ];
}

message FooProfile {
  option (j5.ext.v1.message).object = {};

  int64 place = 1 [
    (j5.ext.v1.field).integer = {},
    (j5.list.v1.field).int64.filtering.filterable = true
  ];

  string name = 2 [
    (j5.ext.v1.field).string = {},
    (j5.list.v1.field).string.open_text.searching = {
      searchable: true
      field_identifier: "tsv_profile_name"
    }
  ];
}

enum FooStatus {
  FOO_STATUS_UNSPECIFIED = 0;
  FOO_STATUS_ACTIVE = 1;
  FOO_STATUS_DELETED = 2;
}
